# Unreal-MCP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  UnrealMCP.uplugin  install.bat  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
Content/Python/: init_unreal.py
MCP/: _bridge.py  _tcp_bridge.py  mcp_server.py  requirements.txt
MCP/tools/: __init__.py  assets.py  blueprint_graph.py  blueprints.py  core.py  data_assets.py  data_tables.py  debug.py  editor_commands.py  enhanced_input.py  level.py  materials.py  profiling.py  widgets.py
Source/UnrealMCPBridge/: UnrealMCPBridge.Build.cs
Source/UnrealMCPBridge/Private/: EpicUnrealMCPBridge.cpp  EpicUnrealMCPModule.cpp  MCPServerRunnable.cpp
Source/UnrealMCPBridge/Public/: EpicUnrealMCPBridge.h  EpicUnrealMCPModule.h  MCPServerRunnable.h
cli/: go.mod  main.go
cli/cmd/: assets.go  blueprints.go  core.go  data_assets.go  data_tables.go  debug.go  doctor.go  editor.go  enhanced_input.go  init_cmd.go  list_commands.go  materials.go  niagara.go  profiling.go  registry.go  root.go  statetree.go  widgets.go
cli/internal/bridge/: client.go  framing.go  port.go
cli/internal/project/: detect.go  embed.go  (+1 more)
cli/npm/: install.js  package.json  run.js
docs/: MCP_CONFIG_REFERENCE.md
unrealmcp/: __init__.py  _bridge.py
unrealmcp/tools/: __init__.py  assets.py  blueprint_graph.py  blueprints.py  core.py  data_assets.py  data_tables.py  debug.py  editor_commands.py  enhanced_input.py  level.py  materials.py  niagara.py  profiling.py  statetree.py  widgets.py
(+87 files in other folders)
